k8s/apipulse-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apipulse-backend-service
  namespace: apipulse
  labels:
    app: apipulse-backend
spec:
  selector:
    app: apipulse-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
