k8s/apipulse-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apipulse-frontend-service
  namespace: apipulse
  labels:
    app: apipulse-frontend
spec:
  selector:
    app: apipulse-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
